--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@google-cloud/local-auth": "^3.0.1",
+    "@hello-pangea/dnd": "^18.0.1",
     "@nivo/core": "^0.99.0",
     "@nivo/pie": "^0.99.0",
     "@radix-ui/react-checkbox": "^1.3.3",
